[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/idle/jellyidle1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/JellyKering.gd" type="Script" id=2]
[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/death/jelly-death1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/death/jelly-death3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/idle/jellyidle2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/death/jelly-death2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/idle/jellyidle3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/death/jelly-death4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Jelly Kering-20201022T141405Z-001/Jelly Kering/death/jelly-death5.png" type="Texture" id=9]
[ext_resource path="res://Sounds/SFX/enemy_hit_1.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Utils/Sounds.tscn" type="PackedScene" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "move",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.1537, 36.0869 )

[sub_resource type="CircleShape2D" id=3]
radius = 1552.61

[sub_resource type="CircleShape2D" id=4]
radius = 2000.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.5202, 38.009 )

[node name="JellyKering" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 3 )

[node name="ViewRadius" type="Area2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="ViewRadius"]
shape = SubResource( 4 )

[node name="CheckPath" type="Timer" parent="."]
wait_time = 0.5

[node name="HitBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 5 )

[node name="Sounds" parent="." instance=ExtResource( 11 )]
sfx = ExtResource( 10 )
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="timeout" from="CheckPath" to="." method="_on_CheckPath_timeout"]
